--- a/src/assets/css/Main.css
+++ b/src/assets/css/Main.css
@@ -2,89 +2,92 @@
 @namespace s "library://ns.adobe.com/flex/spark";
 @namespace mx "library://ns.adobe.com/flex/mx";
 
+global {
 
-global
-{
-
-	/*
-	text-align: center;
-	content-background-color: #000000;
-	*/
+    /*
+    text-align: center;
+    content-background-color: #000000;
+    */
 }
-s|Label  {
-	fontSize: 44.5;
-	fontFamily: "Font Rg CFF";
-	color: #2D023C;
-	
+
+s|Label {
+    fontSize: 44.5;
+    fontFamily: "Font Rg CFF";
+    color: #2D023C;
+
 }
 
 .verysmallprint {
-	fontSize: 14;
-	fontFamily: "Font Rg CFF";
-	color:#ED1C24;
+    fontSize: 14;
+    fontFamily: "Font Rg CFF";
+    color: #ED1C24;
 
 }
+
 .smallprint {
-	fontSize: 21;
-	fontFamily: "Font Light CFF";
-	color:#FFFFFF;
+    fontSize: 21;
+    fontFamily: "Font Light CFF";
+    color: #FFFFFF;
 }
+
 .smallprintLink {
-	fontSize: 21;
-	fontFamily: "Font Light CFF";
-	color:#ED1C24;
+    fontSize: 21;
+    fontFamily: "Font Light CFF";
+    color: #ED1C24;
 }
+
 s|FormHeading s|Label#labelDisplay {
-	fontSize: 32;
-	fontFamily: "Font Rg CFF";
-	color: #FFFFFF;
-	fontWeight: normal;
+    fontSize: 32;
+    fontFamily: "Font Rg CFF";
+    color: #FFFFFF;
+    fontWeight: normal;
 }
 
 s|FormItem s|Label#labelDisplay {
-	fontSize: 32;
-	fontFamily: "Font Rg CFF";
-	color: #FFFFFF;
-	fontWeight: normal;
-}
-s|VGroup.Game s|Label
-{
-	fontSize: 32;
-	fontFamily: "Font Rg CFF";
-	textAlign: left;
-	color: #000000;
-}
-s|VGroup.Game s|Label.heading
-{
-	fontSize: 32;
-	fontFamily: "Font Rg CFF";
-	textAlign: left;
-	color: #ED1C24;
-}
-s|Button {
-	skinClass: ClassReference("skins.CustomButton");
+    fontSize: 32;
+    fontFamily: "Font Rg CFF";
+    color: #FFFFFF;
+    fontWeight: normal;
 }
 
+s|VGroup.Game s|Label {
+    fontSize: 32;
+    fontFamily: "Font Rg CFF";
+    textAlign: left;
+    color: #000000;
+}
+
+s|VGroup.Game s|Label.heading {
+    fontSize: 32;
+    fontFamily: "Font Rg CFF";
+    textAlign: left;
+    color: #ED1C24;
+}
+
+s|Button {
+    skinClass: ClassReference("skins.CustomButton");
+}
 
 s|FormItem {
-	backgroundAlpha:0;
-	skinClass:ClassReference("skins.CustomFormItem")
+    backgroundAlpha: 0;
+    skinClass: ClassReference("skins.CustomFormItem")
 }
-
 
 s|RadioButton {
-	skinClass: ClassReference("views.components.RadioButtonSkin1");
-	
+    skinClass: ClassReference("views.components.RadioButtonSkin1");
+
 }
+
 s|Scroller {
-	skinClass:ClassReference("skins.MyScroller");
+    skinClass: ClassReference("skins.MyScroller");
 }
+
 s|ActionBar {
-	skinClass:ClassReference("skins.FlatActionBar");
+    skinClass: ClassReference("skins.FlatActionBar");
 }
-.thankyou
-{
-	fontFamily: "Font Rg";
-	fontWeight:bold;
-	fontSize: 150;
+
+.thankyou {
+    fontFamily: "Font Rg";
+    fontWeight: bold;
+    fontSize: 150;
 }
