--- a/src/skins/CustomDataGridSkin.mxml
+++ b/src/skins/CustomDataGridSkin.mxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <skins:DataGridSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
-                    xmlns:s="library://ns.adobe.com/flex/spark"
-                    xmlns:mx="library://ns.adobe.com/flex/mx"
                     xmlns:skins="spark.skins.spark.*"
                     xmlns:local="skins.*">
 
@@ -10,7 +8,7 @@
         <!-- Must be a factory with id="headerRenderer".
              This overrides the similar headerRenderer definition in DataGridSkin -->
         <fx:Component id="headerRenderer">
-            <local:CustomDataGridHeaderRendered />
+            <local:CustomDataGridHeaderRendered/>
         </fx:Component>
 
     </fx:Declarations>
