--- a/src/skins/CustomDataGridHeaderRendered.mxml
+++ b/src/skins/CustomDataGridHeaderRendered.mxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:DefaultGridHeaderRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
-                             xmlns:s="library://ns.adobe.com/flex/spark"
-                             xmlns:mx="library://ns.adobe.com/flex/mx">
+                             xmlns:s="library://ns.adobe.com/flex/spark">
 
     <fx:Declarations>
         <!-- Remove text styles as you wish.
@@ -12,6 +11,6 @@
                  verticalCenter="1" left="0" right="0" top="0" bottom="0"
                  verticalAlign="middle"
                  maxDisplayedLines="1"
-                 showTruncationTip="true" />
+                 showTruncationTip="true"/>
     </fx:Declarations>
 </s:DefaultGridHeaderRenderer>
