--- a/src/skins/CustomFormItem.mxml
+++ b/src/skins/CustomFormItem.mxml
@@ -14,115 +14,112 @@ in accordance with the terms of the license agreement accompanying it.
 Move the indicator tooltip string to a resource bundle
 -->
 
-<!--- The default skin class for the Spark FormItem component.  
+<!--- The default skin class for the Spark FormItem component.
 
-@see spark.components.FormItem
+ @see spark.components.FormItem
 
-@langversion 3.0
-@playerversion Flash 10
-@playerversion AIR 1.5
-@productversion Flex 4.5
+ @langversion 3.0
+ @playerversion Flash 10
+ @playerversion AIR 1.5
+ @productversion Flex 4.5
 -->
-<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" 
-        xmlns:s="library://ns.adobe.com/flex/spark" 
+<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009"
+        xmlns:s="library://ns.adobe.com/flex/spark"
         xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
-        alpha.disabledStates=".5">  
-    
+        alpha.disabledStates=".5">
+
     <!-- host component -->
     <fx:Metadata>
-        <![CDATA[ 
-        /** 
-        * @copy spark.skins.spark.ApplicationSkin#hostComponent
-        */
+        <![CDATA[
+        /**
+         * @copy spark.skins.spark.ApplicationSkin#hostComponent
+         */
         [HostComponent("spark.components.FormItem")]
         ]]>
     </fx:Metadata>
-    
+
     <fx:Script fb:purpose="styling">
-        <![CDATA[                
-            /**
-             *  @private
-             */
-            override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number) : void
-            {
-                // Push backgroundColor and backgroundAlpha directly.
-                // Handle undefined backgroundColor by hiding the background object.
-               
-                    background.visible = false;
-               
-                
-                var indicatorSource:Object;
-                if (currentState == "error" || currentState == "requiredAndError")
-                    indicatorSource = getStyle("errorIndicatorSource");
-                else if (currentState == "required" || "requiredAndDisabled")
-                    indicatorSource = getStyle("requiredIndicatorSource");
-                
-                if (indicatorSource && indicatorDisplay)
-                {
-                    indicatorDisplay.source = indicatorSource;
-                }
-                
-                super.updateDisplayList(unscaledWidth, unscaledHeight);
+        <![CDATA[
+        /**
+         *  @private
+         */
+        override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number):void {
+            // Push backgroundColor and backgroundAlpha directly.
+            // Handle undefined backgroundColor by hiding the background object.
+
+            background.visible = false;
+
+
+            var indicatorSource:Object;
+            if (currentState == "error" || currentState == "requiredAndError")
+                indicatorSource = getStyle("errorIndicatorSource");
+            else if (currentState == "required" || "requiredAndDisabled")
+                indicatorSource = getStyle("requiredIndicatorSource");
+
+            if (indicatorSource && indicatorDisplay) {
+                indicatorDisplay.source = indicatorSource;
             }
-            
-            /**
-             *  @private
-             */
-            override public function setCurrentState(stateName:String, playTransition:Boolean=true):void
-            {
-                super.setCurrentState(stateName, playTransition);
-                invalidateDisplayList();
-            }
+
+            super.updateDisplayList(unscaledWidth, unscaledHeight);
+        }
+
+        /**
+         *  @private
+         */
+        override public function setCurrentState(stateName:String, playTransition:Boolean = true):void {
+            super.setCurrentState(stateName, playTransition);
+            invalidateDisplayList();
+        }
         ]]>        
     </fx:Script>
-    
+
     <s:states>
-        <s:State name="normal" />
-        <s:State name="disabled" stateGroups="disabledStates"/> 
-        <s:State name="error" stateGroups="errorStates"/>   
-        <s:State name="required" stateGroups="requiredStates"/> 
+        <s:State name="normal"/>
+        <s:State name="disabled" stateGroups="disabledStates"/>
+        <s:State name="error" stateGroups="errorStates"/>
+        <s:State name="required" stateGroups="requiredStates"/>
         <s:State name="requiredAndDisabled" stateGroups="requiredStates, disabledStates"/>
-        <s:State name="requiredAndError" stateGroups="requiredStates, errorStates"/>    
+        <s:State name="requiredAndError" stateGroups="requiredStates, errorStates"/>
     </s:states>
-    
+
     <s:layout>
         <s:FormItemLayout>
             <s:constraintColumns>
                 <!--- The column containing the sequence label. -->
-                <s:ConstraintColumn id="sequenceCol" />
+                <s:ConstraintColumn id="sequenceCol"/>
                 <!--- The column containing the FormItem's label. -->
-                <s:ConstraintColumn id="labelCol" />
+                <s:ConstraintColumn id="labelCol"/>
                 <!--- The column containing the FormItem's content. -->
                 <s:ConstraintColumn id="contentCol" width="100%"/>
                 <!--- The column containing the FormItem's help content. -->
                 <s:ConstraintColumn id="helpCol" maxWidth="200"/>
-            </s:constraintColumns>         
+            </s:constraintColumns>
             <s:constraintRows>
                 <!--- @private -->
                 <s:ConstraintRow id="row1" baseline="maxAscent:10" height="100%"/>
-            </s:constraintRows>  
+            </s:constraintRows>
         </s:FormItemLayout>
     </s:layout>
-            
+
     <!--- Defines the appearance of the FormItem's background. -->
     <s:Rect id="background" left="0" right="0" top="0" bottom="0" alpha="0">
-        
+
     </s:Rect>
-    
+
     <!--- @copy spark.components.FormItem#sequenceLabelDisplay -->
-    <s:Label id="sequenceLabelDisplay" 
+    <s:Label id="sequenceLabelDisplay"
              fontWeight="bold"
              left="sequenceCol:10" right="sequenceCol:5"
              bottom="row1:10" baseline="row1:0"/>
     <!--- @copy spark.components.FormItem#labelDisplay -->
     <s:Label id="labelDisplay"
-			 fontFamily="Font Light CFF"
-             left="labelCol:0" right="labelCol:5" 
-             bottom="row1:10" baseline="row1:0"/>  
+             fontFamily="Font Light CFF"
+             left="labelCol:0" right="labelCol:5"
+             bottom="row1:10" baseline="row1:0"/>
     <!--- @copy spark.components.SkinnableContainer#contentGroup -->
     <!-- Don't show the error tip on the content elements -->
     <s:Group id="contentGroup" showErrorTip="false" showErrorSkin="true"
-             left="contentCol:0" right="contentCol:1" 
+             left="contentCol:0" right="contentCol:1"
              baseline="row1:0" bottom="row1:10">
         <s:layout>
             <s:VerticalLayout/>
@@ -133,19 +130,19 @@ Move the indicator tooltip string to a resource bundle
              height="{Math.max(indicatorDisplay.height, contentGroup.contentHeight)}" includeInLayout="false">
         <!--- @private -->
         <s:Image id="indicatorDisplay" verticalCenter="0"
-                       toolTip="Required" toolTip.errorStates=""
-                       includeIn="requiredStates,errorStates"/>
+                 toolTip="Required" toolTip.errorStates=""
+                 includeIn="requiredStates,errorStates"/>
     </s:Group>
-        
+
     <!--- @copy spark.components.FormItem#helpContentGroup -->
     <s:Group id="helpContentGroup" excludeFrom="errorStates"
-              fontWeight="normal" color="0x666666"
+             fontWeight="normal" color="0x666666"
              left="helpCol:27" right="helpCol:10"
              bottom="row1:10" baseline="row1:0"/>
     <!--- @copy spark.components.FormItem#errorTextDisplay -->
     <s:RichText id="errorTextDisplay" includeIn="errorStates"
                 fontWeight="normal" color="0xFE0000"
                 left="helpCol:27" right="helpCol:10"
-                bottom="row1:10" baseline="row1:0" 
-                maxDisplayedLines="-1"/>    
- </s:Skin>
+                bottom="row1:10" baseline="row1:0"
+                maxDisplayedLines="-1"/>
+</s:Skin>
