--- a/src/skins/SunglassHslider.mxml
+++ b/src/skins/SunglassHslider.mxml
@@ -20,55 +20,55 @@
 
 
 <!--- The default skin class for the Spark HSlider component. The thumb and track skins are defined by the
-HSliderThumbSkin and HSliderTrackSkin classes, respectively.  
+ HSliderThumbSkin and HSliderTrackSkin classes, respectively.
 
-       @see spark.components.HSlider
-       @see spark.skins.spark.HSliderThumbSkin
-       @see spark.skins.spark.HSliderTrackSkin
-                
-      @langversion 3.0
-      @playerversion Flash 10
-      @playerversion AIR 1.5
-      @productversion Flex 4
+ @see spark.components.HSlider
+ @see spark.skins.spark.HSliderThumbSkin
+ @see spark.skins.spark.HSliderTrackSkin
+
+ @langversion 3.0
+ @playerversion Flash 10
+ @playerversion AIR 1.5
+ @productversion Flex 4
 -->
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark"
-    xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minHeight="32" alpha.disabled="0.5">
+             xmlns:fb="http://ns.adobe.com/flashbuilder/2009" minHeight="32" alpha.disabled="0.5">
 
     <fx:Metadata>
-    <![CDATA[ 
-        /** 
+    <![CDATA[
+        /**
          * @copy spark.skins.spark.ApplicationSkin#hostComponent
          */
         [HostComponent("spark.components.HSlider")]
-    ]]>
-    </fx:Metadata> 
-    
+        ]]>
+    </fx:Metadata>
+
     <fx:Script fb:purpose="styling">
         /* Define the skin elements that should not be colorized. 
-           For slider, the skin itself is colorized but the individual parts are not. */
+         For slider, the skin itself is colorized but the individual parts are not. */
         static private const exclusions:Array = ["track", "thumb"];
 
         /**
          * @private
-         */  
-        override public function get colorizeExclusions():Array {return exclusions;}
-        
+         */
+        override public function get colorizeExclusions():Array {
+            return exclusions;
+        }
+
         /**
          * @private
          */
-        override protected function initializationComplete():void
-        {
+        override protected function initializationComplete():void {
             useChromeColor = true;
             super.initializationComplete();
         }
     </fx:Script>
-    
+
     <fx:Script>
         /**
          *  @private
-         */  
-        override protected function measure() : void
-        {
+         */
+        override protected function measure():void {
             // Temporarily move the thumb to the left of the Slider so measurement
             // doesn't factor in its x position. This allows resizing the
             // HSlider to less than 100px in width. 
@@ -78,18 +78,18 @@ HSliderThumbSkin and HSliderTrackSkin classes, respectively.
             thumb.setLayoutBoundsPosition(thumbPos, thumb.getLayoutBoundsY());
         }
     </fx:Script>
-    
+
     <s:states>
-        <s:State name="normal" />
-        <s:State name="disabled" />
+        <s:State name="normal"/>
+        <s:State name="disabled"/>
     </s:states>
-    
+
     <fx:Declarations>
-        <!--- The tooltip used in the mx.controls.Slider control. 
-               To customize the DataTip's appearance, create a custom HSliderSkin class.-->
-        <fx:Component id="dataTip">     
-           <s:DataRenderer minHeight="24" minWidth="40" y="-34">  
-              <s:Rect top="0" left="0" right="0" bottom="0" alpha="0">
+        <!--- The tooltip used in the mx.controls.Slider control.
+     To customize the DataTip's appearance, create a custom HSliderSkin class.-->
+        <fx:Component id="dataTip">
+            <s:DataRenderer minHeight="24" minWidth="40" y="-34">
+                <s:Rect top="0" left="0" right="0" bottom="0" alpha="0">
                     <s:fill>
                         <s:SolidColor color="0x000000" alpha=".9"/>
                     </s:fill>
@@ -104,20 +104,20 @@ HSliderThumbSkin and HSliderTrackSkin classes, respectively.
                          fontWeight="normal" color="white" fontSize="11">
                 </s:Label>
             </s:DataRenderer>
-       </fx:Component>
+        </fx:Component>
     </fx:Declarations>
-    
-    <!--- The default skin class is HSliderTrackSkin. 
-            @copy spark.components.supportClasses.TrackBase#track
-            @see spark.skins.spark.HSliderTrackSkin -->
-    <s:Button id="track" left="0" right="0" minHeight="32" top="0" bottom="0" minWidth="33" width="100" 
+
+    <!--- The default skin class is HSliderTrackSkin.
+ @copy spark.components.supportClasses.TrackBase#track
+ @see spark.skins.spark.HSliderTrackSkin -->
+    <s:Button id="track" left="0" right="0" minHeight="32" top="0" bottom="0" minWidth="33" width="100"
               tabEnabled="false"
-              skinClass="skins.HSliderTrackSkin" />
-              
+              skinClass="skins.HSliderTrackSkin"/>
+
     <!--- The default skin class is HSliderThumbSkin.
-            @copy spark.components.supportClasses.TrackBase#thumb 
-            @see spark.skins.spark.HSliderThumbSkin -->
-    <s:Button id="thumb" top="0" bottom="0" width="32" height="32" 
+ @copy spark.components.supportClasses.TrackBase#thumb
+ @see spark.skins.spark.HSliderThumbSkin -->
+    <s:Button id="thumb" top="0" bottom="0" width="32" height="32"
               tabEnabled="false"
-              skinClass="skins.HSliderThumbSkin" />
+              skinClass="skins.HSliderThumbSkin"/>
 </s:SparkSkin>
