--- a/src/views/FaceBookLogoutOverride.mxml
+++ b/src/views/FaceBookLogoutOverride.mxml
@@ -94,16 +94,17 @@
         }
         ]]>
 	</fx:Script>
-	
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
-	
 
-	<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-		<s:Label id="status_label" includeInLayout="false" text="status" color="0x000000" />
-		<s:BorderContainer width="100%" height="100%" id="container">
-			<s:BusyIndicator horizontalCenter="0" verticalCenter="0" width="100" height="100" rotationInterval="200" symbolColor="#1caed0" id="busone" />
-		</s:BorderContainer>
-	</s:VGroup>
+    <fx:Declarations>
+        <!-- Place non-visual elements (e.g., services, value objects) here -->
+    </fx:Declarations>
+
+
+    <s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
+        <s:Label id="status_label" includeInLayout="false" text="status" color="0x000000"/>
+        <s:BorderContainer width="100%" height="100%" id="container">
+            <s:BusyIndicator horizontalCenter="0" verticalCenter="0" width="100" height="100" rotationInterval="200"
+                             symbolColor="#1caed0" id="busone"/>
+        </s:BorderContainer>
+    </s:VGroup>
 </s:View>
