--- a/src/views/ScanWristband.mxml
+++ b/src/views/ScanWristband.mxml
@@ -16,8 +16,6 @@
         import events.UserEvent;
         import events.ViewEvent;
 
-        import model.Config;
-
         import mx.events.FlexEvent;
         import mx.rpc.events.FaultEvent;
         import mx.rpc.events.InvokeEvent;
@@ -140,25 +138,28 @@
         }
         ]]>
 	</fx:Script>
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-		<!--s:HTTPService id="checkURN" resultFormat="flashvars" method="POST" url="http://www.ignitesocial.co.uk/ignite/checkuser.php" result="httpservice1_resultHandler(event)" fault="httpservice1_faultHandler(event)" /-->
-	</fx:Declarations>
-	<s:BorderContainer width="100%" height="100%" borderVisible="false">
-		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<s:BitmapImage width="100%" height="100%" scaleMode="zoom" smooth="true" smoothingQuality="high" complete="bitmapImage1_completeHandler(event)" source="{Resource.BACKGROUND_HOME}"/>
-		</s:VGroup>
-		<s:VGroup width="100%" height="100%" horizontalAlign="left" verticalAlign="middle" paddingLeft="30">
-			<s:Label text="STYLE IT OUT" fontSize="150" color="0xED1C24"  fontFamily="Font Rg CFF"  />
-			<s:Label text="SUNGLASS HUT" fontSize="106" color="0x8A8A8D"  fontFamily="Font Rg CFF"  />
-			<s:Spacer height="180"/>
-			
-			<s:Button label="BEGIN" click="generate_urn(event)" skinClass="skins.CustomButtonHome"/>
-			
-			
-		</s:VGroup>	
-	</s:BorderContainer>
-	<s:TextInput id="barcodeWriter" top="-50" addedToStage="getBarcodeFocus()" visible="false" includeInLayout="false" text="" textAlign="left" softKeyboardActivating="urn_softKeyboardActivatingHandler(event)"/>
-	<s:TextInput id="barcodeInput" includeInLayout="true" visible="false"  addedToStage="getBarcodeFocus()"  text="" textAlign="left"/>
+    <fx:Declarations>
+        <!-- Place non-visual elements (e.g., services, value objects) here -->
+        <!--s:HTTPService id="checkURN" resultFormat="flashvars" method="POST" url="http://www.ignitesocial.co.uk/ignite/checkuser.php" result="httpservice1_resultHandler(event)" fault="httpservice1_faultHandler(event)" /-->
+    </fx:Declarations>
+    <s:BorderContainer width="100%" height="100%" borderVisible="false">
+        <s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
+            <s:BitmapImage width="100%" height="100%" scaleMode="zoom" smooth="true" smoothingQuality="high"
+                           complete="bitmapImage1_completeHandler(event)" source="{Resource.BACKGROUND_HOME}"/>
+        </s:VGroup>
+        <s:VGroup width="100%" height="100%" horizontalAlign="left" verticalAlign="middle" paddingLeft="30">
+            <s:Label text="STYLE IT OUT" fontSize="150" color="0xED1C24" fontFamily="Font Rg CFF"/>
+            <s:Label text="SUNGLASS HUT" fontSize="106" color="0x8A8A8D" fontFamily="Font Rg CFF"/>
+            <s:Spacer height="180"/>
+
+            <s:Button label="BEGIN" click="generate_urn(event)" skinClass="skins.CustomButtonHome"/>
+
+
+        </s:VGroup>
+    </s:BorderContainer>
+    <s:TextInput id="barcodeWriter" top="-50" addedToStage="getBarcodeFocus()" visible="false" includeInLayout="false"
+                 text="" textAlign="left" softKeyboardActivating="urn_softKeyboardActivatingHandler(event)"/>
+    <s:TextInput id="barcodeInput" includeInLayout="true" visible="false" addedToStage="getBarcodeFocus()" text=""
+                 textAlign="left"/>
 
 </s:View>
