--- a/src/views/components/CopyoftandcWindow.mxml
+++ b/src/views/components/CopyoftandcWindow.mxml
@@ -64,103 +64,103 @@
         }
         ]]>
 	</fx:Script>
-	
-	
-	<s:Rect id="tbFill" left="0" right="0" top="0" bottom="0" radiusX="0" >
-		<s:stroke>
-			<s:SolidColorStroke id="borderStroke" color="0x00adee" weight="4"/>
-		</s:stroke>
-		<s:fill>
-			<s:SolidColor color="#FFFFFF"/>
-		</s:fill>
-	</s:Rect>
-	<s:VGroup width="100%" height="100%" paddingBottom="20" paddingTop="20" id="theBox" paddingLeft="20" paddingRight="20">
-		<s:HGroup width="100%" height="15%" horizontalAlign="center" verticalAlign="middle" click="image1_clickHandler(event)">
-			<s:HGroup width="90%" horizontalAlign="center">
-				
-				<s:Label id="labelDisplay" 
-						 text="Terms and Conditions"
-						 maxDisplayedLines="1" 
-						 fontFamily="Font Rg CFF"
-						 fontWeight="normal"
-						 fontSize="38"
-						 horizontalCenter="0" verticalCenter="1" verticalAlign="middle" 
-						 color="#00ADEE"/>
-			</s:HGroup>
-			<s:HGroup horizontalAlign="right">
-				<s:Image source="assets/images/closeterms.png"  />
-			</s:HGroup>
-			
-		</s:HGroup>	
-		
-		<controls:WebView visible="false" id="tec" width="100%" height="80%" addedToStage="ta_addedToStageHandler(event)" render="tec_renderHandler(event)" resize="tec_resizeHandler(event)" />
-	</s:VGroup>
-	
-	<fx:Metadata>
-		[Event(name="showTerms", type="flash.events.Event")]
-	</fx:Metadata>
-	<fx:Script>
+
+
+    <s:Rect id="tbFill" left="0" right="0" top="0" bottom="0" radiusX="0">
+        <s:stroke>
+            <s:SolidColorStroke id="borderStroke" color="0x00adee" weight="4"/>
+        </s:stroke>
+        <s:fill>
+            <s:SolidColor color="#FFFFFF"/>
+        </s:fill>
+    </s:Rect>
+    <s:VGroup width="100%" height="100%" paddingBottom="20" paddingTop="20" id="theBox" paddingLeft="20"
+              paddingRight="20">
+        <s:HGroup width="100%" height="15%" horizontalAlign="center" verticalAlign="middle"
+                  click="image1_clickHandler(event)">
+            <s:HGroup width="90%" horizontalAlign="center">
+
+                <s:Label id="labelDisplay"
+                         text="Terms and Conditions"
+                         maxDisplayedLines="1"
+                         fontFamily="Font Rg CFF"
+                         fontWeight="normal"
+                         fontSize="38"
+                         horizontalCenter="0" verticalCenter="1" verticalAlign="middle"
+                         color="#00ADEE"/>
+            </s:HGroup>
+            <s:HGroup horizontalAlign="right">
+                <s:Image source="assets/images/closeterms.png"/>
+            </s:HGroup>
+
+        </s:HGroup>
+
+        <controls:WebView visible="false" id="tec" width="100%" height="80%"
+                          addedToStage="ta_addedToStageHandler(event)" render="tec_renderHandler(event)"
+                          resize="tec_resizeHandler(event)"/>
+    </s:VGroup>
+
+    <fx:Metadata>
+        [Event(name="showTerms", type="flash.events.Event")]
+    </fx:Metadata>
+    <fx:Script>
 		<![CDATA[
-			
-			protected var tcRequest:URLRequest;
-			protected var tcLoader:URLLoader = new URLLoader();
-			public var initialUrl:String;
-			protected var myStage:StageWebView;
-			
-			protected function ttlWndw_close(evt:CloseEvent):void {
-				trace("inside ttlWndw_close");
-				PopUpManager.removePopUp(evt.currentTarget as IFlexDisplayObject);
-			}
-			
-			protected function ta_addedToStageHandler(event:Event):void
-			{
-				//var pt:Point = new Point(event.localX, event.localY);
-				
-				tempo=setInterval(resizza,300);
-				noBLink=setInterval(showOff,1000);
-				
-				var pt:Point = theBox.localToGlobal(new Point());
-				//var locazia:Point=gino.contentToGlobal(new Point());
-				//trace("converso x:"+locazia.x+" y:"+locazia.y+" t:"+pt.x);
-				// This copies a single file into a subdir of appStorageDir
-				
-				try
-				{
-					var source:File = File.applicationDirectory.resolvePath("assets/html/tandc.html"); 
-					// create file(s) in a subdir of appStorageDir to simplify cleanup
-					var destination:File = File.applicationStorageDirectory.resolvePath("assets/html/tandc.html");
-					// now do the copy and create a ref to our HTML file that a browser will understand
-					source.copyTo(destination, true);   
-					initialUrl = "file://" + destination.nativePath ;
-					trace("terms added to stage");
-					
-				} catch (error:Error)
-				{
-					trace("Warning: "+error.message.toString());
-				}
-				
-				tec.x=pt.x;
-				tec.y=pt.y;
-				//tec.y=(stage.height-this.height)/2+3;
-				//tec.source="http://www.ignitesocial.co.uk/nike/tandc.html";
-				tec.source=initialUrl;
-			}
-			private function showOff() {
-				clearInterval(noBLink);
-				tec.visible=true;
-			}
-			protected function resizza():void {
-				var pt:Point = theBox.localToGlobal(new Point());
-				//var locazia:Point=gino.contentToGlobal(new Point());
-				trace("converso x:"+pt.x);
-				tec.x=pt.x;
-				tec.y=pt.y; 
-				tec.invalidateDisplayList();
-			}
-			
-			
-		]]>
+        protected var tcRequest:URLRequest;
+        protected var tcLoader:URLLoader = new URLLoader();
+        public var initialUrl:String;
+        protected var myStage:StageWebView;
+
+        protected function ttlWndw_close(evt:CloseEvent):void {
+            trace("inside ttlWndw_close");
+            PopUpManager.removePopUp(evt.currentTarget as IFlexDisplayObject);
+        }
+
+        protected function ta_addedToStageHandler(event:Event):void {
+            //var pt:Point = new Point(event.localX, event.localY);
+
+            tempo = setInterval(resizza, 300);
+            noBLink = setInterval(showOff, 1000);
+
+            var pt:Point = theBox.localToGlobal(new Point());
+            //var locazia:Point=gino.contentToGlobal(new Point());
+            //trace("converso x:"+locazia.x+" y:"+locazia.y+" t:"+pt.x);
+            // This copies a single file into a subdir of appStorageDir
+
+            try {
+                var source:File = File.applicationDirectory.resolvePath("assets/html/tandc.html");
+                // create file(s) in a subdir of appStorageDir to simplify cleanup
+                var destination:File = File.applicationStorageDirectory.resolvePath("assets/html/tandc.html");
+                // now do the copy and create a ref to our HTML file that a browser will understand
+                source.copyTo(destination, true);
+                initialUrl = "file://" + destination.nativePath;
+                trace("terms added to stage");
+
+            } catch (error:Error) {
+                trace("Warning: " + error.message.toString());
+            }
+
+            tec.x = pt.x;
+            tec.y = pt.y;
+            //tec.y=(stage.height-this.height)/2+3;
+            //tec.source="http://www.ignitesocial.co.uk/nike/tandc.html";
+            tec.source = initialUrl;
+        }
+
+        private function showOff() {
+            clearInterval(noBLink);
+            tec.visible = true;
+        }
+
+        protected function resizza():void {
+            var pt:Point = theBox.localToGlobal(new Point());
+            //var locazia:Point=gino.contentToGlobal(new Point());
+            trace("converso x:" + pt.x);
+            tec.x = pt.x;
+            tec.y = pt.y;
+            tec.invalidateDisplayList();
+        }
+        ]]>
 	</fx:Script>
-	
-	
+
+
 </s:VGroup>
