--- a/src/views/components/ErrorAlert.mxml
+++ b/src/views/components/ErrorAlert.mxml
@@ -35,28 +35,29 @@
         }
         ]]>
 	</fx:Script>
-<fx:Metadata>
-	[Event(name="closeError", type="flash.events.Event")]
-</fx:Metadata>
-	<fx:Declarations>
-		<s:DropShadowFilter id="shadowfilter" strength=".8" distance="8" />
-	</fx:Declarations> 
-		<s:Rect id="tbFill" left="0" right="0" top="0" bottom="1" radiusX="0" filters="{[shadowfilter]}">
-			<s:stroke>
-				<s:SolidColorStroke color="#ED1C24" weight="0">
-					
-				</s:SolidColorStroke>
-			</s:stroke>
-			<s:fill>
-				<s:SolidColor color="#ED1C24"/>
-			</s:fill>
-		</s:Rect>
-		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32" fontFamily="Font Rg CFF" text="{windowTitle}"/>
-			<s:Label x="58" y="79" width="484" height="140" color="0x000000" maxDisplayedLines="{-1}"  lineBreak="toFit"
-                     backgroundColor="#ffffff"
-						fontSize="24" verticalAlign="middle" text="{message}"
-						/>
-			<s:Button height="50"  label="Close" click="PopUpManager.removePopUp(this);" skinClass="skins.CustomButtonWhite"  />
-		</s:VGroup>
+    <fx:Metadata>
+        [Event(name="closeError", type="flash.events.Event")]
+    </fx:Metadata>
+    <fx:Declarations>
+        <s:DropShadowFilter id="shadowfilter" strength=".8" distance="8"/>
+    </fx:Declarations>
+    <s:Rect id="tbFill" left="0" right="0" top="0" bottom="1" radiusX="0" filters="{[shadowfilter]}">
+        <s:stroke>
+            <s:SolidColorStroke color="#ED1C24" weight="0">
+
+            </s:SolidColorStroke>
+        </s:stroke>
+        <s:fill>
+            <s:SolidColor color="#ED1C24"/>
+        </s:fill>
+    </s:Rect>
+    <s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
+        <s:Label x="81" y="124" color="#FFFFFF" fontSize="32" fontFamily="Font Rg CFF" text="{windowTitle}"/>
+        <s:Label x="58" y="79" width="484" height="140" color="0x000000" maxDisplayedLines="{-1}" lineBreak="toFit"
+                 backgroundColor="#ffffff"
+                 fontSize="24" verticalAlign="middle" text="{message}"
+                />
+        <s:Button height="50" label="Close" click="PopUpManager.removePopUp(this);"
+                  skinClass="skins.CustomButtonWhite"/>
+    </s:VGroup>
 </s:Group>
