--- a/src/views/components/ModalAlert.mxml
+++ b/src/views/components/ModalAlert.mxml
@@ -58,32 +58,33 @@
         }
         ]]>
 	</fx:Script>
-<fx:Metadata>
-	[Event(name="closeError", type="flash.events.Event")]
-</fx:Metadata>
-	<fx:Declarations>
-		<s:DropShadowFilter id="shadowfilter" strength=".8" distance="8" />
-	</fx:Declarations> 
-		<s:Rect id="tbFill" left="0" right="0" top="0" bottom="1" filters="{[shadowfilter]}">
-			<s:stroke>
-				<s:SolidColorStroke color="0xD23830" weight="0">
-					
-				</s:SolidColorStroke>
-			</s:stroke>
-			<s:fill>
-				<s:SolidColor color="#ED1C24"/>
-			</s:fill>
-		</s:Rect>
-		<s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<s:Label x="81" y="124" color="#FFFFFF" fontSize="32"  fontFamily="Font Rg CFF" lineBreak="toFit" text="{windowTitle}"  width="500"/>
-			<s:TextArea x="58" y="79" width="484" height="140" color="0x000000"  editable="false"
-						fontSize="16" verticalAlign="middle" text="{message}" 
-						selectable="false" />
-			<s:HGroup width="100%" horizontalAlign="center">
-				<s:Button height="50"  label="Try again" click="tryAgainFunc(event)" skinClass="skins.CustomButtonWhite"  />
-				<s:Spacer width="15"/>
-				<s:Button height="50"  label="Go offline" click="cancelFunc(event)" skinClass="skins.CustomButtonWhite"   />
-			</s:HGroup>
-			
-		</s:VGroup>
+    <fx:Metadata>
+        [Event(name="closeError", type="flash.events.Event")]
+    </fx:Metadata>
+    <fx:Declarations>
+        <s:DropShadowFilter id="shadowfilter" strength=".8" distance="8"/>
+    </fx:Declarations>
+    <s:Rect id="tbFill" left="0" right="0" top="0" bottom="1" filters="{[shadowfilter]}">
+        <s:stroke>
+            <s:SolidColorStroke color="0xD23830" weight="0">
+
+            </s:SolidColorStroke>
+        </s:stroke>
+        <s:fill>
+            <s:SolidColor color="#ED1C24"/>
+        </s:fill>
+    </s:Rect>
+    <s:VGroup width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
+        <s:Label x="81" y="124" color="#FFFFFF" fontSize="32" fontFamily="Font Rg CFF" lineBreak="toFit"
+                 text="{windowTitle}" width="500"/>
+        <s:TextArea x="58" y="79" width="484" height="140" color="0x000000" editable="false"
+                    fontSize="16" verticalAlign="middle" text="{message}"
+                    selectable="false"/>
+        <s:HGroup width="100%" horizontalAlign="center">
+            <s:Button height="50" label="Try again" click="tryAgainFunc(event)" skinClass="skins.CustomButtonWhite"/>
+            <s:Spacer width="15"/>
+            <s:Button height="50" label="Go offline" click="cancelFunc(event)" skinClass="skins.CustomButtonWhite"/>
+        </s:HGroup>
+
+    </s:VGroup>
 </s:Group>
